helm-chart/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              memory: 1024Mi
            requests:
              cpu: 400m
              memory: 512Mi
          volumeMounts:
            - mountPath: /media
              name: data
            - mountPath: /config-jellyfin
              name: config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
