helm-chart/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: jellyfin
spec:
  rules:
  - host: qbittorrent.home-lab.begoodguys.ovh
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port: 
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - qbittorrent.home-lab.begoodguys.ovh
    secretName: tls-qbittorrent-http
